--- a/config/locales/devise.es.yml
+++ b/config/locales/devise.es.yml
@@ -26,10 +26,15 @@ es:
     mailer:
       confirmation_instructions:
         subject: "Instrucciones de confirmación"
-      reset_password_instructions:
-        subject: "Instrucciones para restablecer tu contraseña"
       unlock_instructions:
         subject: "Instrucciones de desbloqueo"
+      reset_password_instructions:
+        action: Cambiar mi contraseña
+        greeting: "¡Hola %{recipient}!"
+        instruction: Alguien ha solicitado un enlace para cambiar su contraseña, lo que se puede realizar a través del siguiente enlace.
+        instruction_2: Si usted no lo ha solicitado, por favor ignore este correo electrónico.
+        instruction_3: Su contraseña no será cambiada hasta que usted acceda al enlace y cree una nueva.
+        subject: Instrucciones de recuperación de contraseña
     omniauth_callbacks:
       failure: "No se te ha podido autorizar de %{kind} debido a \"%{reason}\"."
       success: "Identificado correctamente de %{kind}."
