--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -26,6 +26,7 @@ es:
     change_password: "Cambiar contraseña"
     edit_organization: Modificar declaracion responsable
     delete_organization: Eliminar declaracion responsable
+    edit_delete_organization: Modificación o baja de inscripción
     mandatory_field: "Este campo es obligatorio"
     successfully_updated_record: "Registro actualizado correctamente"
     successfully_destroyed_record: "Registro eliminado correctamente"
