--- a/config/locales/organizations.es.yml
+++ b/config/locales/organizations.es.yml
@@ -47,6 +47,10 @@ es:
         range_2: "De 10.000 a 24.999 euros"
         range_3: "De 25.000 a 49.000 euros"
         range_4: "Más de 50.000 euros"
+      entity_type:
+        association: "Asociación"
+        federation: "Federación"
+        lobby: "Lobby"
       subvention: "Ayudas y/o subvenciones recibidas del Ayto"
 
       represented_entity_title: "Datos personas o entidades sin personalidad a quienes se va a representar"
