--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -128,6 +128,9 @@ es:
     legal_representant_full_name: nombre y apellidos del representante legal
     user_name: nombre y apellidos
     invalidated?: invalidada
+    agents: Agentes
+    represented_entities: Entidades representadas
+    interests: Áreas de interés
   events_exporter:
     title: título
     description: descripción
