--- a/config/locales/organizations.es.yml
+++ b/config/locales/organizations.es.yml
@@ -51,7 +51,12 @@ es:
         association: "Asociación"
         federation: "Federación"
         lobby: "Lobby"
+      statuses:
+        active: "Activo"
+        inactive: "Inactivo"
+        terminated: "Baja"
       subvention: "Ayudas y/o subvenciones recibidas del Ayto"
+      contract: "Contratos y/o convenios con el Ayto"
 
       represented_entity_title: "Datos personas o entidades sin personalidad a quienes se va a representar"
       represented_entity_identifier: "NIF"
@@ -61,8 +66,6 @@ es:
       represented_entity_range_fund: "Fondos que la entidad dedica"
       represented_entity_fiscal_year: "Ejercicio anual"
       represented_entity_subvention: "Ayudas y/o subvenciones recibidas del Ayto"
-
-      contract: "Contratos y/o convenios con el Ayto"
       represented_entity_contract: "Contratos y/o convenios con el Ayto"
 
       agents_title: "Personas que se reúnen"
