Use events exporter at events public csv export

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -140,7 +140,8 @@ en:
     scheduled: fecha
     updated_at: última actualización
     user_name: usuario
-    position_names: titular de la agenda
+    holder_name: titular agenda
+    position_names: titular de agenda participantes
     location: lugar
     status: estado
     notes: notas
