Add missing fields to organization public show. Fix texts. Display info when fiscal year is blank.

--- a/config/locales/organizations.es.yml
+++ b/config/locales/organizations.es.yml
@@ -28,7 +28,13 @@ es:
       postal_code: "CP"
       town: "Municipio"
       address: "Domicilio"
+      number: "Número"
+      gateway: "Portal"
+      stairs: "Escalera"
+      floor: "Planta"
+      door: "Puerta"
       province: "Provincia"
+      country: "País"
       category: "Categoría"
       description: "Finalidad y Objetivos"
       web: "Página web"
