controlled exception searching Holder, and moved to helper

--- a/config/locales/activerecord.en.yml
+++ b/config/locales/activerecord.en.yml
@@ -36,6 +36,7 @@ en:
       holder:
         one: "titular de agenda"
         other: "titulares de agenda"
+        not_found: Holder not found
       attachment:
         one: "archivo adjunto"
         other: "archivos adjuntos"
