--- a/config/locales/mailers.es.yml
+++ b/config/locales/mailers.es.yml
@@ -1,51 +1,121 @@
 es:
   mailers:
     cancel_event:
-      subject: "Cancelado evento: %{title}"
-      welcome: "Hola %{name}"
-      text1: "El evento: %{title}"
-      text2: "Ha sido cancelado por la siguiente razón:"
-      canceled_at: "A día %{canceled_at}"
+      subject: "Registro de Lobbies: evento cancelado por Lobby %{event_reference}"
+      head1: "Registro de Lobbies: Evento cancelado por Lobby: %{event_reference}"
+      head2: "Datos del Lobby"
+      head3: "Datos del evento"
+      head4: "Motivo de la cancelación"
+      text1: "El número de referencia es: %{event_reference}"
+      text2: "Lobby: "
+      text3: "Nombre y apellidos persona de contacto: "
+      text4: "Correo electrónico de persona de contacto: "
+      text5: "Título: "
+      text6: "Descripción: "
+      text7: "Fecha y hora: "
+      text8: "Lugar: "
+      text9: "Motivo: "
+      notice: "Entre en el aplicativo de Agendas, para ver todo el detalle y poder tramitar la solicitud."
+      declined_at: "A día %{declined_at}"
       thanks: "Un saludo"
     decline_event:
-      subject: "Rechazado evento: %{title}"
-      welcome: "Hola %{name}"
-      text1: "El evento: %{title}"
-      text2: "Ha sido rechazado por %{name}, por la siguiente razón:"
+      subject: "Registro de Lobbies: evento no aceptado %{event_reference}"
+      head1: "Registro de Lobbies: Evento no aceptado: %{event_reference}"
+      head2: "Datos de la solicitud"
+      head3: "Motivo de la no aceptación de la solicitud"
+      text1: "El número de referencia es: %{event_reference}"
+      text2: "Título: "
+      text3: "Descripción: "
+      text4: "Motivo: "
+      notice: "Para ver todo el detalle, entre en la aplicación del registro de lobbies: "
+      canceled_at: "A día %{canceled_at}"
+      thanks: "Un saludo"
+    decline_event_by_holder:
+      subject: "Registro de Lobbies: evento cancelado por Titular %{event_reference}"
+      head1: "Registro de Lobbies: Evento cancelado por Titular: %{event_reference}"
+      head2: "Datos del evento"
+      head3: "Motivo de la cancelación"
+      text1: "El número de referencia es: %{event_reference}"
+      text2: "Título: "
+      text3: "Descripción: "
+      text4: "Fecha y hora: "
+      text5: "Lugar: "
+      text6: "Motivo: "
+      notice: "Para ver todo el detalle, entre en la aplicación del registro de lobbies: "
       declined_at: "A día %{declined_at}"
       thanks: "Un saludo"
     accept_event:
-      subject: "Aceptado evento: %{title}"
-      welcome: "Hola %{name}"
-      text1: "El evento: %{title}"
-      text2: "Ha sido aceptado por %{name}, por la siguiente razón:"
+      subject: "Registro de Lobbies: evento aceptado %{event_reference}"
+      head1: "Registro de Lobbies: Evento aceptado: %{event_reference}"
+      head2: "Datos de la solicitud"
+      head3: "Datos del evento aceptado"
+      text1: "El número de referencia es: %{event_reference}"
+      text2: "Título: "
+      text3: "Descripción: "
+      text4: "Fecha y hora: "
+      text5: "Lugar:"
+      notice: "Para ver todo el detalle, entre en la aplicación del registro de lobbies: "
       accepted_at: "A día %{accepted_at}"
       thanks: "Un saludo"
     create_event:
-      subject: "Creado evento: %{title}"
-      welcome: "Hola %{name}"
-      text1: "El evento: %{title}"
-      text2: "Ha sido Creado por %{name}"
+      subject: "Registro de Lobbies: solicitud evento %{event_reference}"
+      head1: "Registro de Lobbies: Solicitud Evento: %{event_reference}"
+      head2: "Datos del lobby"
+      head3: "Datos de la solicitud"
+      text1: "El número de referencia es: %{event_reference}"
+      text2: "Lobby: "
+      text3: "Nombre y apellidos persona de contacto: "
+      text4: "Correo electrónico de persona de contacto: "
+      text5: "Título: "
+      text6: "Descripción: "
+      text7: "Fecha propuesta: "
+      notice: "Entre en la bandeja de solicitudes del aplicativo de Agendas, para ver todo el detalle y poder tramitar la solicitud."
       accepted_at: "A día %{accepted_at}"
       thanks: "Un saludo"
     create_organization:
-      subject: "Creado lobby: %{title}"
-      welcome: "Hola %{name}"
-      text1: "Ha sido creado el lobby: %{title}"
-      thanks: "Un saludo"
+      subject: "Registro de Lobbies: alta de lobby %{lobby_reference}"
+      head1: "Registro de Lobbies: Alta de Lobby: %{lobby_reference}"
+      head2: "Se ha recibido su inscripción en el Registro de Lobbies del Ayuntamiento de Madrid:"
+      head3: "Las credenciales para acceder a la aplicación son:"
+      text1: "El número de referencia es: "
+      text2: "Lobby: "
+      text3: "Fecha de inscripción: "
+      text4: "Usuario: "
+      text5: "Contraseña: "
+      text6: "Recuerde cambiar la contraseña la primera vez que acceda al aplicativo."
+      text7: "Deberá presentar una nueva declaración responsable, para cualquier modificación en los datos presentados o para solicitar la baja de esta inscripción."
+      text8: "A través de la aplicación Registro de Lobbies: "
+      text9: "Deberá dar de alta los datos de personas que pueden asistir a reuniones por parte del lobby (agentes)."
+      text10: "Podrá solicitar reuniones"
+      text11: "Podrá gestionar las áreas de interés para el envío de avisos."
+      notice: "Entre en la bandeja de solicitudes del aplicativo de Agendas, para ver todo el detalle y poder tramitar la solicitud."
     delete_organization:
       subject: "Creado lobby: %{title}"
       welcome: "Hola %{name}"
       text1: "Ha sido Borrado el lobby: %{title}"
       thanks: "Un saludo"
     invalidate_organization:
-      subject: "Creado lobby: %{title}"
-      welcome: "Hola %{name}"
-      text1: "Ha sido invalidado el lobby: %{title}"
-      thanks: "Un saludo"
+      subject: "Registro de Lobbies: alta de lobby %{lobby_reference}"
+      head1: "Registro de Lobbies: Baja de inscripción: %{lobby_reference}"
+      head2: "Se ha recibido la baja de su inscripción en el Registro de Lobbies del Ayuntamiento de Madrid. A partir de este momento, no podrá entrar en la aplicación del registro y su cuenta quedará desactivada:"
+      text1: "El número de referencia es: %{lobby_reference}"
+      text2: "Lobby: "
+      text3: "Fecha de baja: "
     update_organization:
-      subject: "Actualizado lobby: %{title}"
-      welcome: "Hola %{name}"
-      text1: "Ha sido actualizado el lobby: %{title}"
-      thanks: "Un saludo"
-    footer: "2018 Ayuntamiento Madrid"
+      subject: "Registro de Lobbies: alta de Lobby %{lobby_reference}"
+      head1: "Registro de Lobbies: Modificación de inscripción: %{lobby_reference}"
+      head2: "Se ha recibido la modificación de sus datos de inscripción en el Registro de Lobbies del Ayuntamiento de Madrid:"
+      text1: "El número de referencia es: %{lobby_reference}"
+      text2: "Lobby: "
+      text3: "Fecha de modificación: "
+    infringement_email:
+      link_html: "Enlace: "
+      subject: "Registro de Lobbies: buzón incumplimientos %{infringement_reference}"
+      head1: "Registro de Lobbies: Buzón Incumplimientos: %{infringement_reference}"
+      head2: "Datos del incumplimiento"
+      text1: "El número de referencia es: %{infringement_reference}"
+      text2: "Asunto: "
+      text3: "Descripción:  "
+      text4: "Archivo adjunto: "
+      text5: "Afecta a:"
+
