Fix mailer template footer translation

--- a/config/locales/mailers.en.yml
+++ b/config/locales/mailers.en.yml
@@ -1,5 +1,6 @@
 en:
   mailers:
+    footer: "Madrid City Council %{year}"
     welcome_user:
       subject: "Welcome to lobbies registry"
       welcome: "Welcome %{name},"
