Refactor organization mailer, specs and views. Change some translations.

--- a/config/locales/mailers.es.yml
+++ b/config/locales/mailers.es.yml
@@ -104,12 +104,14 @@ es:
       text2: "Lobby: "
       text3: "Fecha de baja: "
     invalidate_organization:
-      subject: "Creado lobby: %{title}"
-      welcome: "Hola %{name}"
-      text1: "Ha sido Borrado el lobby: %{title}"
-      thanks: "Un saludo"
+      subject: "Inhabilitación del lobby: %{title}"
+      head1: "Registro de Lobbies: Inhabilitación: %{lobby_reference}"
+      text1: "El número de referencia es: %{lobby_reference}"
+      text2: "Se ha procedido a inhabilitar su cuenta en el Registro de Lobbies del Ayuntamiento de Madrid. A partir de este momento, no podrá entrar en la aplicación del Registro de Lobbies y su cuenta quedará desactivada."
+      text3: "Lobby: "
+      text4: "Fecha de inhabilitación: "
     update_organization:
-      subject: "Registro de Lobbies: alta de Lobby %{lobby_reference}"
+      subject: "Registro de Lobbies: modificación de Lobby %{lobby_reference}"
       head1: "Registro de Lobbies: Modificación de inscripción: %{lobby_reference}"
       head2: "Se ha recibido la modificación de sus datos de inscripción en el Registro de Lobbies del Ayuntamiento de Madrid:"
       text1: "El número de referencia es: %{lobby_reference}"
