Add minor fixes on email content.

--- a/config/locales/mailers.en.yml
+++ b/config/locales/mailers.en.yml
@@ -78,11 +78,11 @@ en:
       accepted_at: "On %{accepted_at}"
       thanks: "Regards"
     create_organization:
-      subject: "Lobby Registration: registered lobby %{lobby_reference}"
-      head1: "Lobby Registration: Registered Lobby: %{lobby_reference}"
+      subject: "Lobby Registration: registered lobby %{lobby_name}"
+      head1: "Lobby Registration: Registered Lobby: %{lobby_name}"
       head2: "Your registration has been received in the Register of Lobbies of the City of Madrid:"
       head3: "The credentials to access the application are:"
-      text1: "The reference number is: "
+      text1: "The reference number is: %{lobby_reference}"
       text2: "Lobby: "
       text3: "Registration date: "
       text4: "User "
@@ -111,8 +111,8 @@ en:
       text2: "Lobby: "
       text3: "Unsubscribe date: "
     update_organization:
-      subject: "Lobby Registration: registered lobby %{lobby_reference}"
-      head1: "Lobby Registration: updated lobby: %{lobby_reference}"
+      subject: "Lobby Registration: registered lobby %{lobby_name}"
+      head1: "Lobby Registration: updated lobby: %{lobby_name}"
       head2: "Modification of your registration data has been received in the Lobby Register of Madrid City Council:"
       text1: "The reference number is: %{lobby_reference}"
       text2: "Lobby: "
