--- a/config/locales/mailers.es.yml
+++ b/config/locales/mailers.es.yml
@@ -80,11 +80,11 @@ es:
       accepted_at: "A día %{accepted_at}"
       thanks: "Un saludo"
     create_organization:
-      subject: "Registro de Lobbies: alta de lobby %{lobby_reference}"
-      head1: "Registro de Lobbies: Alta de Lobby: %{lobby_reference}"
+      subject: "Registro de Lobbies: alta de lobby %{lobby_name}"
+      head1: "Registro de Lobbies: Alta de Lobby: %{lobby_name}"
       head2: "Se ha recibido su inscripción en el Registro de Lobbies del Ayuntamiento de Madrid:"
       head3: "Las credenciales para acceder a la aplicación son:"
-      text1: "El número de referencia es: "
+      text1: "El número de referencia es: %{lobby_reference}"
       text2: "Lobby: "
       text3: "Fecha de inscripción: "
       text4: "Usuario: "
@@ -97,22 +97,23 @@ es:
       text11: "Podrá gestionar las áreas de interés para el envío de avisos."
       notice: "Entre en la bandeja de solicitudes del aplicativo de Agendas, para ver todo el detalle y poder tramitar la solicitud."
     delete_organization:
-      subject: "Registro de Lobbies: alta de lobby %{lobby_reference}"
-      head1: "Registro de Lobbies: Baja de inscripción: %{lobby_reference}"
+      subject: "Registro de Lobbies: baja de lobby %{lobby_name}"
+      head1: "Registro de Lobbies: Baja de inscripción: %{lobby_name}"
       head2: "Se ha recibido la baja de su inscripción en el Registro de Lobbies del Ayuntamiento de Madrid. A partir de este momento, no podrá entrar en la aplicación del registro y su cuenta quedará desactivada:"
       text1: "El número de referencia es: %{lobby_reference}"
       text2: "Lobby: "
       text3: "Fecha de baja: "
+      text4: "Recuerde cambiar la contraseña la primera vez que acceda al aplicativo"
     invalidate_organization:
       subject: "Inhabilitación del lobby: %{title}"
-      head1: "Registro de Lobbies: Inhabilitación: %{lobby_reference}"
+      head1: "Registro de Lobbies: Inhabilitación: %{lobby_name}"
       text1: "El número de referencia es: %{lobby_reference}"
       text2: "Se ha procedido a inhabilitar su cuenta en el Registro de Lobbies del Ayuntamiento de Madrid. A partir de este momento, no podrá entrar en la aplicación del Registro de Lobbies y su cuenta quedará desactivada."
       text3: "Lobby: "
       text4: "Fecha de inhabilitación: "
     update_organization:
-      subject: "Registro de Lobbies: modificación de Lobby %{lobby_reference}"
-      head1: "Registro de Lobbies: Modificación de inscripción: %{lobby_reference}"
+      subject: "Registro de Lobbies: modificación de Lobby %{lobby_name}"
+      head1: "Registro de Lobbies: Modificación de inscripción: %{lobby_name}"
       head2: "Se ha recibido la modificación de sus datos de inscripción en el Registro de Lobbies del Ayuntamiento de Madrid:"
       text1: "El número de referencia es: %{lobby_reference}"
       text2: "Lobby: "
@@ -127,4 +128,3 @@ es:
       text3: "Descripción:  "
       text4: "Archivo adjunto: "
       text5: "Afecta a:"
-
