--- a/config/locales/organizations.es.yml
+++ b/config/locales/organizations.es.yml
@@ -208,7 +208,9 @@ es:
       to: "Fecha fin de la habilitación"
       public_assignments: "¿Esta persona ha trabajado al servicio del Ayuntamiento de Madrid, sus organismos públicos, sociedades mercantiles o consorcios en los que participe, en algún momento de los dos años previos a la fecha desde la que va actuar por cuenta de quien se inscribe? En caso afirmativo, indique los datos (organismo, puesto o cargo y las fechas en las que lo desempeñó)"
       public_assignments_only_show: "¿Esta persona ha trabajado al servicio del Ayuntamiento de Madrid, sus organismos públicos, sociedades mercantiles o consorcios en los que participe, en algún momento de los dos años previos a la fecha desde la que va actuar por cuenta de quien se inscribe?"
-      allow_public_data: "I agree with this information about personal identifying data can be public. "
+      allow_public_data: "Acredito el consentimiento expreso de esta persona para que sus datos meramente identificativos puedan hacerse públicos. "
+      "true": "Acredito el consentimiento expreso para que los datos meramente identificativos puedan hacerse públicos."
+      "false": "No acredito el consentimiento expreso para que los datos meramente identificativos puedan hacerse públicos."
 
     interest:
       title_fieldset: "Área de Interés"
