Remove text duplicate from integration errors. Change subject from notification_error and notification_succes on ResponisbleStatementMailer.

--- a/config/locales/mailers.es.yml
+++ b/config/locales/mailers.es.yml
@@ -129,8 +129,8 @@ es:
       text4: "Archivo adjunto: "
       text5: "Afecta a:"
     notification_success:
-      subject: "Registro de Lobbies: alta de lobby %{lobby_name}"
+      subject: "Registro de Lobbies: alta de lobby %{lobby_name} (%{inscription_date}) - %{reference}"
       head1: "Se ha dado de alta un nuevo Lobby: %{lobby_name}"
     notification_error:
-      subject: "Error en Registro de Lobbies: %{lobby_name}"
+      subject: "Error en Registro de Lobbies: %{lobby_name} - %{reference}"
       head1: "Se han producido errores en el Registro de Lobbies: %{lobby_name}"
