--- a/config/locales/organizations.en.yml
+++ b/config/locales/organizations.en.yml
@@ -121,6 +121,7 @@ en:
         cnmc: "CNMC"
         europe_union: "Unión Europea"
         others: "Otro"
+      other_registered_lobby: "Otros registros"  
 
     legal_representant:
       add_legal_representative: "Añadir representante legal"
