Change how some events statistics are retrieved

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -170,7 +170,7 @@ en:
     agents: "People registered to meet"
     public_agendas: "About public agendas"
     lobby_events: "Events wiht lobby activity"
-    total_events: "Total events"
+    total_events: "Total events (since December 28th, 2017)"
     amount_public_agendas: "Total public agendas"
     category: "Category"
     interest: "Interest"
