Added application url to welcome email text

--- a/config/locales/mailers.en.yml
+++ b/config/locales/mailers.en.yml
@@ -20,7 +20,7 @@ en:
       text5: "Title: "
       text6: "Description: "
       text7: "Date and time: "
-      text8: "Adrress: "
+      text8: "Address: "
       text9: "Reasons: "
       notice: "Enter the Agendas application to see all the details and be able to process the application.."
       declined_at: "On %{declined_at}"
@@ -89,7 +89,7 @@ en:
       text5: "Password: "
       text6: "Remember to change the password the first time you access the application."
       text7: "You must submit a new responsible statement, for any modification in the data presented or to request the cancellation of this registration."
-      text8: "Through the Registration of Lobbies application: "
+      text8: "Through the Registration of Lobbies application (https://registrodelobbies.madrid.es): "
       text9: "You must register the data of people who can attend meetings by the lobby (agents)."
       text10: "You can request meetings"
       text11: "You can manage the areas of interest for sending notices."
