--- a/config/locales/mailers.es.yml
+++ b/config/locales/mailers.es.yml
@@ -91,7 +91,7 @@ es:
       text5: "Contraseña: "
       text6: "Recuerde cambiar la contraseña la primera vez que acceda al aplicativo."
       text7: "Deberá presentar una nueva declaración responsable, para cualquier modificación en los datos presentados o para solicitar la baja de esta inscripción."
-      text8: "A través de la aplicación Registro de Lobbies: "
+      text8: "A través de la aplicación Registro de Lobbies (https://registrodelobbies.madrid.es): "
       text9: "Deberá dar de alta los datos de personas que pueden asistir a reuniones por parte del lobby (agentes)."
       text10: "Podrá solicitar reuniones"
       text11: "Podrá gestionar las áreas de interés para el envío de avisos."
