--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -183,6 +183,41 @@ en:
     invalidated_reasons: invalidation reasons
     not_allowed_empty_reasons: You should give some reasons to inhabilitate the organization
 
+    newsletters:
+      create_success: Newsletter created successfully
+      update_success: Newsletter updated successfully
+      send_success: Newsletter sent successfully
+      delete_success: Newsletter deleted successfully
+      index:
+        title: Newsletters
+        new_newsletter: New newsletter
+        subject: Subject
+        segment_recipient: Recipients
+        sent: Sent
+        actions: Actions
+        draft: Draft
+        edit: Edit
+        delete: Delete
+        preview: Preview
+        empty_newsletters: There are no newsletters to show
+      new:
+        title: New newsletter
+        from: E-mail address that will appear as sending the newsletter
+      edit:
+        title: Edit newsletter
+      show:
+        title: Newsletter preview
+        send: Send
+        affected_users: (%{n} affected users)
+        sent_at: Sent at
+        subject: Subject
+        segment_recipient: Recipients
+        from: E-mail address that will appear as sending the newsletter
+        body: Email content
+        body_help_text: This is how the users will see the email
+        send_alert: Are you sure you want to send this newsletter to %{n} users?
+
   backend_header:
     open_gov: "Gobierno abierto"
     administracion: "Administración"
+  
